--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,20 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        // The Fabric Gradle plugin uses an open ended version to react
+        // quickly to Android tooling updates
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
@@ -30,4 +45,8 @@ dependencies {
     compile 'com.github.rey5137:material:1.2.4'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
+    compile('com.twitter.sdk.android:twitter:1.14.0@aar') {
+        transitive = true;
+    }
+    compile 'jp.wasabeef:recyclerview-animators:2.2.3'
 }
